# video-detect

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  bootstrap-tests.sh  bootstrap.sh  cpplint.cfg  vcpkg.json
.github/workflows/: docker-image.yml
include/video-detect/: ff2cv.h  frame_analyzer.h  frame_size_estimator.h  hv_edge_detector.h  img_grayscale_adaptor.h  mat_bridge.h  options.h  vline.h
include/video-detect/ffmpeg/: ff2cv.h
include/video-detect/img/: conv.h  gaussian_blur.h  grayscale_adaptor.h  hv_edge_detector.h  kernel.h  sobel_xy_filter.h  two_dim_matrix.h
include/video-detect/mat/: conv.h  filter.h  gaussian_blur.h  grayscale_adaptor.h  kernel.h  kernel_defs.h  mat_2d.h  sobel_xy_filter.h  threshold.h  vector_2d.h
include/video-detect/opencv2/: detect.h  export_u8_mat_2d.h  grayscale_adapter.h  mat_2d_adapter.h  util.h
include/video-detect/util/: chainable_object_receiver.h  chainable_object_receiver_merge.h  chainable_object_receiver_split.h  object_receiver.h  worker.h
src/: CMakeLists.txt  ff2cv.cc  ffmpeg_adapter.cc  ffmpeg_adapter.h  frame_size_estimator.cc  hv_edge_detector.cc  main.cc  mat_bridge.cc  options.cc
src/ffmpeg/: ff2cv.cc
src/opencv2/: export_u8_mat_2d.cc  grayscale_adapter.cc
src/util/: worker.cc
test/: CMakeLists.txt  main.cc
test/include/video-detect/util/: mock_object_receiver.h
test/src/img/: conv_test.cc  kernel_test.cc
test/src/mat/: conv_test.cc  kernel_test.cc  mat_2d_test.cc
test/src/opencv2/: mat_2d_adapter_test.cc
test/src/util/: worker_test.cc
